@@ -7,7 +7,6 @@
  <TextView  
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
-    android:text="Database viewer comming here"
     android:id="@+id/DatabaseToView"
     />
   <LinearLayout
@@ -16,26 +15,30 @@
     android:layout_height="wrap_content"
   >
   <Button
-    android:layout_width="wrap_content" 
+    android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
+    android:layout_weight="1"
     android:text="@string/DBTables"
     android:id="@+id/Tables"
   />
   <Button
-    android:layout_width="wrap_content" 
+    android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
+    android:layout_weight="1"
     android:text="@string/DBViews"
     android:id="@+id/Views"
   />
   <Button
-    android:layout_width="wrap_content" 
+    android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
+    android:layout_weight="1"
     android:text="@string/DBIndexs"
     android:id="@+id/Index"
   />
   <Button
-    android:layout_width="wrap_content" 
+    android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
+    android:layout_weight="1"
     android:text="@string/DBQuery"
     android:id="@+id/Query"
   />
