@@ -1,0 +1,65 @@
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    >
+  <LinearLayout
+    android:id="@+id/QueryFrame"
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:gravity="right">
+    <Button
+      android:layout_width="fill_parent" 
+      android:layout_height="wrap_content" 
+      android:text="@string/Run"
+      android:layout_weight="1"
+      android:id="@+id/Run"
+      />
+    <Button
+      android:layout_width="fill_parent" 
+      android:layout_height="wrap_content" 
+      android:text="@string/PgUp"
+      android:layout_weight="1"
+      android:id="@+id/PgUp"
+      />
+    <Button
+      android:layout_width="fill_parent" 
+      android:layout_height="wrap_content" 
+      android:layout_weight="1"
+      android:text="@string/PgDn"
+      android:id="@+id/PgDwn"
+      />
+  </LinearLayout>
+  <LinearLayout
+    android:id="@+id/QueryFrame"
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:gravity="right">
+    <EditText
+      android:layout_height="wrap_content" 
+      android:id="@+id/SQLStm"
+      android:layout_width="fill_parent"
+      android:inputType="textMultiLine"
+      android:hint="@string/PressMenuSQL"/>
+  
+  </LinearLayout>
+  <ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+ 	android:layout_width="fill_parent"
+    android:layout_height="wrap_content" >
+    <HorizontalScrollView
+      xmlns:android="http://schemas.android.com/apk/res/android"
+      android:layout_width="wrap_content"
+      android:layout_height="fill_parent">
+   	  <TableLayout
+        android:id="@+id/datagrid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
+      </TableLayout>
+    </HorizontalScrollView>
+  </ScrollView>      
+</LinearLayout>
