@@ -1,5 +1,6 @@
 Next version
-  Executed statements can be saved in a table named aSQLiteManager (configuration)
+  Executed statements can be saved in current database in a table named
+    aSQLiteManager (configuration)
   A simple SQL builder where tables and fields from the "select fields from tables"
     part can be selected from two lists
   Paging on Table and View data viewer implemented. Numbers of records to return can be
